core/errors/src/main/java/com/example/errors/ServerErrorException.kt
package com.example.errors

class ServerErrorException : BaseNetworkException()
